--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue">#64B5F6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
